feat: refactor card component

--- a/index.html
+++ b/index.html
@@ -149,60 +149,104 @@
         <h2 class="work-examples__title">Примеры наших работ</h2>
         <div class="wrapper__carousel-work">
           <ul class="work-examples__cards">
-            <li class="work-examples__card">
-              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
-              <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
-              <div class="work-examples__card-pricing">
-                <div class="cost__block">
-                  <p class="cost__block-desc">Цена</p>
-                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+            <li class="card">
+              <div class="card__image">
+                <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
+                <span class="card__sale">-21%</span>
+                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
+                <!-- <button class="card__favorite favorite">❤</button> -->
+              </div>
+              <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+              <div class="card__pricing">
+                <div class="card__cost">
+                  <p class="card__cost-desc">Цена</p>
+                  <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <div class="work-examples__card-buttons">
+                <div class="card__buttons">
                   <button class="button button--black">Расчет стоимости</button>
                   <button class="button button--outline">Заказать</button>
                 </div>
+                <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                  <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                    <path
+                      d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                  </svg>
+                </button>
               </div>
             </li>
-            <li class="work-examples__card">
-              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
-              <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
-              <div class="work-examples__card-pricing">
-                <div class="cost__block">
-                  <p class="cost__block-desc">Цена</p>
-                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+            <li class="card">
+              <div class="card__image">
+                <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
+                <span class="card__sale">-21%</span>
+                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
+                <!-- <button class="card__favorite favorite">❤</button> -->
+              </div>
+              <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+              <div class="card__pricing">
+                <div class="card__cost">
+                  <p class="card__cost-desc">Цена</p>
+                  <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <div class="work-examples__card-buttons">
+                <div class="card__buttons">
                   <button class="button button--black">Расчет стоимости</button>
                   <button class="button button--outline">Заказать</button>
                 </div>
+                <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                  <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                    <path
+                      d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                  </svg>
+                </button>
               </div>
             </li>
-            <li class="work-examples__card">
-              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
-              <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
-              <div class="work-examples__card-pricing">
-                <div class="cost__block">
-                  <p class="cost__block-desc">Цена</p>
-                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+            <li class="card">
+              <div class="card__image">
+                <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
+                <span class="card__sale">-21%</span>
+                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
+                <!-- <button class="card__favorite favorite">❤</button> -->
+              </div>
+              <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+              <div class="card__pricing">
+                <div class="card__cost">
+                  <p class="card__cost-desc">Цена</p>
+                  <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <div class="work-examples__card-buttons">
+                <div class="card__buttons">
                   <button class="button button--black">Расчет стоимости</button>
                   <button class="button button--outline">Заказать</button>
                 </div>
+                <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                  <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                    <path
+                      d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                  </svg>
+                </button>
               </div>
             </li>
-            <li class="work-examples__card">
-              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
-              <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
-              <div class="work-examples__card-pricing">
-                <div class="cost__block">
-                  <p class="cost__block-desc">Цена</p>
-                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+            <li class="card">
+              <div class="card__image">
+                <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
+                <span class="card__sale">-21%</span>
+                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
+                <!-- <button class="card__favorite favorite">❤</button> -->
+              </div>
+              <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+              <div class="card__pricing">
+                <div class="card__cost">
+                  <p class="card__cost-desc">Цена</p>
+                  <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <div class="work-examples__card-buttons">
+                <div class="card__buttons">
                   <button class="button button--black">Расчет стоимости</button>
                   <button class="button button--outline">Заказать</button>
                 </div>
+                <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                  <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                    <path
+                      d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                  </svg>
+                </button>
               </div>
             </li>
           </ul>
