feat: add similar modals on product page

--- a/product.html
+++ b/product.html
@@ -11,7 +11,6 @@
 <body>
   <section class="product">
     <div class="product__container container">
-
       <div class="product__main">
         <div class="product__photos">
           <h2 class="product__title">Кухня с островом «hpl fenix» черный/дерево</h2>
@@ -20,13 +19,17 @@
               <img src="./assets/img/png/product-img-1.png" alt="">
               <button class="slider__button slider__button--prev">
                 <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" fill="#232323"/>
-                  </svg>
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z"
+                    fill="#232323" />
+                </svg>
               </button>
               <button class="slider__button slider__button--next">
                 <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" fill="#232323"/>
-                  </svg>
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z"
+                    fill="#232323" />
+                </svg>
               </button>
               <button class="slider__favorite favorite">❤</button>
             </div>
@@ -73,7 +76,8 @@
             <span class="product__price-amount">665 180 руб.</span>
           </div>
           <button class="product__button button">Получить расчет</button>
-          <p class="product__description">Компактная уютная кухня коллекции Феникс-2. Выполнена в современном стиле. Фасады, покрытые пластиком fenix hpl, придают кухне матовую поверхность, лишенную следов отпечатков пальцев</p>
+          <p class="product__description">Компактная уютная кухня коллекции Феникс-2. Выполнена в современном стиле. Фасады, покрытые пластиком fenix hpl, придают кухне матовую поверхность, лишенную следов отпечатков пальцев
+          </p>
         </div>
       </div>
 
@@ -106,8 +110,105 @@
         </ul>
       </div>
 
+      <div class="similar">
+        <h3 class="similar__title">Похожие модели</h2>
+        <ul class="similar__list">
+          <li class="similar__card card">
+            <div class="card__image">
+              <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
+            </div>
+            <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+            <div class="card__pricing">
+              <div class="card__cost">
+                <p class="card__cost-desc">Цена</p>
+                <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
+              </div>
+              <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                </svg>
+              </button>
+            </div>
+          </li>
+          <li class="similar__card card">
+            <div class="card__image">
+              <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
+            </div>
+            <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+            <div class="card__pricing">
+              <div class="card__cost">
+                <p class="card__cost-desc">Цена</p>
+                <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
+              </div>
+              <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                </svg>
+              </button>
+            </div>
+          </li>
+          <li class="similar__card card">
+            <div class="card__image">
+              <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
+            </div>
+            <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+            <div class="card__pricing">
+              <div class="card__cost">
+                <p class="card__cost-desc">Цена</p>
+                <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
+              </div>
+              <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                </svg>
+              </button>
+            </div>
+          </li>
+          <li class="similar__card card">
+            <div class="card__image">
+              <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
+            </div>
+            <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+            <div class="card__pricing">
+              <div class="card__cost">
+                <p class="card__cost-desc">Цена</p>
+                <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
+              </div>
+              <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                </svg>
+              </button>
+            </div>
+          </li>
+          <li class="similar__card card">
+            <div class="card__image">
+              <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
+            </div>
+            <p class="card__description">Кухня с белыми рифлёными фасадами</p>
+            <div class="card__pricing">
+              <div class="card__cost">
+                <p class="card__cost-desc">Цена</p>
+                <p class="card__cost-text">от <span class="cost__block-number">665 180</span> руб.</p>
+              </div>
+              <button class="card__go-to button button--black button--icon" aria-label="Перейти на страницу продукта">
+                <svg width="13" height="12" viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                  <path
+                    d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" />
+                </svg>
+              </button>
+            </div>
+          </li>
+        </ul>
+      </div>
+
     </div>
   </section>
+
 </body>
 
 </html>
