feat: add iframe map

--- a/index.html
+++ b/index.html
@@ -388,7 +388,9 @@
         <h4 class="salons__title">
           Салоны продаж
         </h4>
-        <img src="./assets/img/png/map.png" class="salons__map" alt="карта магазинов">
+        <div class="map-responsive">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d63955.0037090271!2d30.5357895!3d59.9388811!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sby!4v1728672703170!5m2!1sru!2sby" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <div class="salons__entry">
           <div class="salons__entry-text-wrap">
             <h5 class="salons__entry-title">Запишитесь в салон</h5>
