feat: ready-kitchen add image to html

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <section class="ready-kitchen">
       <div class="ready-kitchen__container container">
         <div class="ready-kitchen__content">
+          <img class="ready-kitchen__image" src="./assets/img/png/ready-kitchen.png" alt="">
           <span class="ready-kitchen__discount">
             Экономия до 100 000 ₽!
           </span>
