feat: add .breadcrumb

--- a/product.html
+++ b/product.html
@@ -92,6 +92,15 @@
         </div>
       </div>
     </div>
+    <div class="header__main-container container">
+      <ul class=" header__breadcrumb">
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Каталог кухонь</a></li>
+        <li><a href="#">Современные</a></li>
+        <li>Кухня комбинация массив дуба и белая краска</li>
+      </ul>
+    </div>
+    
   </header>
   <section class="product">
     <div class="product__container container">
