--- a/sale.html
+++ b/sale.html
@@ -20,19 +20,19 @@
           </div>
           <nav class="header__nav">
             <ul class="header__nav-list">
-              <li class="header__nav-item"><a href="/aboutUs">
+              <li class="header__nav-item"><a href="/aboutUs.html">
                   О компании
                 </a>
               </li>
-              <li class="header__nav-item"><a href="/services">Услуги</a>
+              <li class="header__nav-item"><a href="/services.html">Услуги</a>
               </li>
-              <li class="header__nav-item"><a href="/clients">Клиентам</a>
+              <li class="header__nav-item"><a href="/clients.html">Клиентам</a>
               </li>
-              <li class="header__nav-item"><a href="/partners">Партнерам</a>
+              <li class="header__nav-item"><a href="/partners.html">Партнерам</a>
               </li>
-              <li class="header__nav-item"><a href="/reviews">Отзывы</a>
+              <li class="header__nav-item"><a href="/reviews.html">Отзывы</a>
               </li>
-              <li class="header__nav-item"><a href="/contacts">Контакты</a>
+              <li class="header__nav-item"><a href="/contacts.html">Контакты</a>
               </li>
             </ul>
           </nav>
