--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
     <section class="work-examples">
       <div class="work-examples__container container">
         <h2 class="work-examples__title">Примеры наших работ</h2>
-        <div class="wrapper__carousel-work">
-          <ul class="work-examples__cards">
-            <li class="card">
+        <div class="wrapper__carousel-work swiper_example">
+          <ul class="work-examples__cards  swiper-wrapper">
+            <li class="card swiper-slide swiper-slide-card">
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
                 <span class="card__sale">-21%</span>
@@ -180,7 +180,7 @@
                 </button>
               </div>
             </li>
-            <li class="card">
+            <li class="card swiper-slide swiper-slide-card">
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
                 <span class="card__sale">-21%</span>
@@ -205,7 +205,7 @@
                 </button>
               </div>
             </li>
-            <li class="card">
+            <li class="card swiper-slide swiper-slide-card">
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
                 <span class="card__sale">-21%</span>
@@ -230,7 +230,7 @@
                 </button>
               </div>
             </li>
-            <li class="card">
+            <li class="card swiper-slide swiper-slide-card">
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png"  alt="white kitchen">
                 <span class="card__sale">-21%</span>
