--- a/product.html
+++ b/product.html
@@ -299,6 +299,39 @@
 
     </div>
   </section>
+  <section class="salons">
+    <div class="salons__container container">
+      <div class="salons__entry">
+        <div class="salons__entry-text-wrap">
+          <h5 class="salons__entry-title">Запишитесь в салон</h5>
+          <p class="salons__entry-description">Запишитесь к дизайнеру-консультанту, чтобы исключить время долгого
+            ожидания в салоне.</p>
+        </div>
+        <form action="" class="form">
+          <div class="personal-data">
+            <div class="text-field-name">
+              <label class="text-field__label" for="name">Введите Имя</label>
+              <input class="text-field__input" type="text" name="name" id="name" placeholder="Ваше имя">
+            </div>
+            <div class="text-field-phone">
+              <label class="text-field__label" for="phone">Введите номер телефона</label>
+              <input class="text-field__input" type="tel" name="phone" placeholder="+7 (000) 000-00-00">
+            </div>
+          </div>
+          <div class="text-field-salons">
+            <label class="text-field__label" for="salons">Выберите салон</label>
+            <input class="text-field__input" type="text" name="salons" list="listSalons" placeholder="Список салонов">
+            <datalist id="listSalons">
+              <option value="some text">some text</option>
+            </datalist>
+          </div>
+          <button class="button salons__button button-red">Записаться в салон</button>
+          <div class="text-warning">Нажимая на кнопку записаться в салон, я принимаю условия <span>политики
+              конфиденциальности.</span></div>
+        </form>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__main-grid">
