--- a/tables.html
+++ b/tables.html
@@ -214,17 +214,61 @@
             </ul>
             <div class="tables__description">
               <h3>Что такое столешница для кухни?</h3>
-              <p>Представляет собой монолитную поверхность, занимающая центральную часть гарнитура. На ней осуществляются самые важные процессы при приготовлении пищи, размещаются кухонные инструменты, бытовая техника. Поэтому при выборе следует учитывать множество факторов: прочность, долговечность, экологичность, устойчивость к механическому и термическому воздействию. Не менее важно выбирать влагостойкие материалы, из-за того, что на кухне часто бывает избыток пара, установлена мойка, вокруг которой собирается влага.</p>
-              <p>Давайте рассмотрим несколько наиболее распространенных материалов, из которых изготавливаются столешницы, разберем их достоинства и недостатки</p>
+              <p>Представляет собой монолитную поверхность, занимающая центральную часть гарнитура. На ней
+                осуществляются самые важные процессы при приготовлении пищи, размещаются кухонные инструменты, бытовая
+                техника. Поэтому при выборе следует учитывать множество факторов: прочность, долговечность,
+                экологичность, устойчивость к механическому и термическому воздействию. Не менее важно выбирать
+                влагостойкие материалы, из-за того, что на кухне часто бывает избыток пара, установлена мойка, вокруг
+                которой собирается влага.</p>
+              <p>Давайте рассмотрим несколько наиболее распространенных материалов, из которых изготавливаются
+                столешницы, разберем их достоинства и недостатки</p>
               <h3>Натуральный камень</h3>
-              <p>Один из самых дорогих, но эстетичных вариантов. Наибольшей популярностью пользуются гранит и мрамор. Они 100% экологичные, долговечные и красивые. К весомым преимуществам можно отнести устойчивость к влаге, механическому воздействию, эстетичность. В случае появления царапин хорошо поддается реставрации путем шлифования</p>
-              <p>К минусам относится большой вес монолитной плиты, при изготовлении гарнитура нужно предусмотреть усиление корпуса. Недостатком является и ограниченный ассортимент расцветок. Если не принципиально, тогда это идеальный выбор для вас. В противном случае следует присмотреться к изделиям из полимерных аналогов.</p>
+              <p>Один из самых дорогих, но эстетичных вариантов. Наибольшей популярностью пользуются гранит и мрамор.
+                Они 100% экологичные, долговечные и красивые. К весомым преимуществам можно отнести устойчивость к
+                влаге, механическому воздействию, эстетичность. В случае появления царапин хорошо поддается реставрации
+                путем шлифования</p>
+              <p>К минусам относится большой вес монолитной плиты, при изготовлении гарнитура нужно предусмотреть
+                усиление корпуса. Недостатком является и ограниченный ассортимент расцветок. Если не принципиально,
+                тогда это идеальный выбор для вас. В противном случае следует присмотреться к изделиям из полимерных
+                аналогов.</p>
             </div>
           </div>
         </div>
-      </section>
-    </div>
-
+      </div>
+    </section>
+    <section class="salons">
+      <div class="salons__container container">
+        <div class="salons__entry">
+          <div class="salons__entry-text-wrap">
+            <h5 class="salons__entry-title">Запишитесь в салон</h5>
+            <p class="salons__entry-description">Запишитесь к дизайнеру-консультанту, чтобы исключить время долгого
+              ожидания в салоне.</p>
+          </div>
+          <form action="" class="form">
+            <div class="personal-data">
+              <div class="text-field-name">
+                <label class="text-field__label" for="name">Введите Имя</label>
+                <input class="text-field__input" type="text" name="name" id="name" placeholder="Ваше имя">
+              </div>
+              <div class="text-field-phone">
+                <label class="text-field__label" for="phone">Введите номер телефона</label>
+                <input class="text-field__input" type="tel" name="phone" placeholder="+7 (000) 000-00-00">
+              </div>
+            </div>
+            <div class="text-field-salons">
+              <label class="text-field__label" for="salons">Выберите салон</label>
+              <input class="text-field__input" type="text" name="salons" list="listSalons" placeholder="Список салонов">
+              <datalist id="listSalons">
+                <option value="some text">some text</option>
+              </datalist>
+            </div>
+            <button class="button salons__button button-red">Записаться в салон</button>
+            <div class="text-warning">Нажимая на кнопку записаться в салон, я принимаю условия <span>политики
+                конфиденциальности.</span></div>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
